--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\h4xx0\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/users/info/etu-s2/dussaulp/.netbeans/8.1/build.properties
